# Catkin-Workspace

./: .gitignore  .gitmodules  README.md
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/beginner_tutorials/: .catkin  setup.sh
devel/.private/beginner_tutorials/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/.private/beginner_tutorials/lib/pkgconfig/: beginner_tutorials.pc
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/foobar/: .catkin  .rosinstall  local_setup.sh
devel/.private/gazebo_plugin_exercises/: .catkin  .rosinstall  setup.sh
devel/.private/moveit_exercises/: .catkin
devel/.private/panda_moveit_config/: .catkin
devel/.private/ros_exercises/: .catkin  _setup_util.py  setup.sh
devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/ros_exercises/: check_palindrome.h  check_palindromeRequest.h  check_palindromeResponse.h  compute_statistics.h  compute_statisticsRequest.h  compute_statisticsResponse.h  find_min_array.h  find_min_arrayRequest.h  find_min_arrayResponse.h  primes_list.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/gazebo_plugin_exercises/: twist_publisher
devel/lib/moveit_exercises/: move_group_interface_exercise  robot_model_and_robot_state_exercise
devel/lib/pkgconfig/: beginner_tutorials.pc  catkin_tools_prebuild.pc  foobar.pc  gazebo_plugin_exercises.pc  moveit_exercises.pc  panda_moveit_config.pc  ros_exercises.pc
devel/lib/ros_exercises/: find_min_array_client  find_min_array_server  palindrome_client  palindrome_server  prime_publisher  statistics_client  statistics_server
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig-version.cmake  beginner_tutorialsConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/foobar/cmake/: foobarConfig-version.cmake  foobarConfig.cmake
devel/share/gazebo_plugin_exercises/cmake/: gazebo_plugin_exercisesConfig-version.cmake  gazebo_plugin_exercisesConfig.cmake
devel/share/moveit_exercises/cmake/: moveit_exercisesConfig-version.cmake  moveit_exercisesConfig.cmake
devel/share/panda_moveit_config/cmake/: panda_moveit_configConfig-version.cmake  panda_moveit_configConfig.cmake
devel/share/ros_exercises/cmake/: ros_exercises-msg-extras.cmake  ros_exercises-msg-paths.cmake  ros_exercisesConfig-version.cmake  ros_exercisesConfig.cmake
logs/gazebo_plugin_exercises/: build.check.009.log.stderr  build.make.000.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.027.log.stderr  build.make.053.log.stderr
logs/moveit_exercises/: build.check.003.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.check.007.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
logs/ros_exercises/: build.check.010.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.029.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.050.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.065.log.stderr  build.make.066.log.stderr  build.make.067.log.stderr  build.make.073.log.stderr  build.make.074.log.stderr  build.make.075.log.stderr  (+39 more)
src/beginner_tutorials/: CMakeLists.txt
src/gazebo_plugin_exercises/: CMakeLists.txt
src/gazebo_plugin_exercises/src/: twist_publisher.cpp  velodyne_plugin.cpp  wheelbarrow_plugin.cpp
src/moveit_exercises/: CMakeLists.txt  package.xml
src/moveit_exercises/launch/: drawer_exercise.launch  motion_planning_api_exercise.launch  motion_planning_pipeline_exercise.launch  move_group_interface_exercise.launch  planning_scene_exercise.launch  planning_scene_ros_api_exercise.launch  robot_model_and_robot_state_exercise.launch
src/moveit_exercises/src/: drawer_exercise.cpp  motion_planning_api_exercise.cpp  motion_planning_pipeline_exercise.cpp  move_group_interface_exercise.cpp  planning_scene_exercise.cpp  planning_scene_ros_api_exercise.cpp  robot_model_and_robot_state_exercise.cpp
src/panda_moveit_config/launch/: moveit_empty.rviz
src/ros_exercises/: CMakeLists.txt  README.md  package.xml
src/ros_exercises/cfg/: example.yaml
src/ros_exercises/include/ros_exercises/: prime.h  print_array.h
src/ros_exercises/launch/: bringup_velodyne.launch  statistics.launch
src/ros_exercises/models/my_vehicle/: model.sdf
src/ros_exercises/src/: find_min_array_client.cpp  find_min_array_server.cpp  palindrome_client.cpp  palindrome_server.cpp  prime.cpp  prime_publisher.cpp  print_array.cpp  statistics_client.cpp  statistics_server.cpp
src/ros_exercises/srv/: check_palindrome.srv  compute_statistics.srv  find_min_array.srv
src/ros_exercises/worlds/: tutorial.world  velodyne.world
(+119 files in other folders)
