<package format="2">
	
	<name>ros_exercises</name>
	<version>1.0.0</version>
	<description>
		ROS exercises for internship
	</description>
	<maintainer email="muratbolu2000@gmail.com">Murat Bolu</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>gazebo_ros</exec_depend>

    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
	
</package>
